.metadata/.plugins/org.eclipse.cdt.ui/file_playback_c_vector.build.log
14:41:11 **** Build of configuration Debug for project file_playback_c_vector ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/stm32f4xx_it.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -DUSE_FULL_LL_DRIVER -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/stm32f4xx_it.d" -MT"Core/Src/stm32f4xx_it.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32f4xx_it.o"
../Core/Src/stm32f4xx_it.c: In function 'TIM3_IRQHandler':
../Core/Src/stm32f4xx_it.c:272:43: error: 'hdac1' undeclared (first use in this function)
  272 |                         HAL_DAC_SetValue(&hdac1, DAC_CHANNEL_1, DAC_ALIGN_12B_R, (newSample.uShort)>>4);
      |                                           ^~~~~
../Core/Src/stm32f4xx_it.c:272:43: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:37: Core/Src/stm32f4xx_it.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

14:41:12 Build Failed. 2 errors, 0 warnings. (took 888ms)

